[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/Scripts/StateMachinePlayerNew.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/RifleHand.piskel" type="Texture" id=2]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/RevolveHand.piskel" type="Texture" id=3]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/SubmachineHand.piskel" type="Texture" id=4]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/Canon_Hand.piskel" type="Texture" id=5]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/BigFuckingGun.piskel" type="Texture" id=6]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/PistolHand.piskel" type="Texture" id=7]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/SniperHand.piskel" type="Texture" id=8]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/DozeHand.piskel" type="Texture" id=9]
[ext_resource path="res://src/Assets/PISKELfiles/GUNS.piskel/FlameHand.piskel" type="Texture" id=10]
[ext_resource path="res://src/Assets/PISKELfiles/Player_Sheet_Master.piskel" type="Texture" id=11]
[ext_resource path="res://src/Assets/PISKELfiles/Player_Head.piskel" type="Texture" id=12]
[ext_resource path="res://src/Scripts/PlayerNew.gd" type="Script" id=13]
[ext_resource path="res://src/Scripts/MiraNova.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Camera2D.tscn" type="PackedScene" id=15]

[sub_resource type="CapsuleShape2D" id=1]
height = 80.0

[sub_resource type="Animation" id=2]
resource_name = "Atack1"

[sub_resource type="Animation" id=3]
resource_name = "Atack2"

[sub_resource type="Animation" id=4]
resource_name = "ClimbUp"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Death"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fall"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "LedgeGrab"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 49 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "Roll"
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "Run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "WallSlide"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerStructure/Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerStructure/Mira:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStructure/Sprites/Head:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Guns",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Atack1 = SubResource( 2 )
anims/Atack2 = SubResource( 3 )
anims/ClimbUp = SubResource( 4 )
anims/Crouch = SubResource( 5 )
anims/Death = SubResource( 6 )
anims/Fall = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/Jump = SubResource( 9 )
anims/LedgeGrab = SubResource( 10 )
anims/Roll = SubResource( 11 )
anims/Run = SubResource( 12 )
anims/WallSlide = SubResource( 13 )

[node name="PlayerStructure" type="Node2D" parent="."]

[node name="Sprites" type="Node2D" parent="PlayerStructure"]

[node name="Body" type="Sprite" parent="PlayerStructure/Sprites"]
texture = ExtResource( 11 )
hframes = 59
frame = 50

[node name="Head" type="Sprite" parent="PlayerStructure/Sprites"]
visible = false
position = Vector2( 0, -27.0781 )
texture = ExtResource( 12 )

[node name="Mira" type="Node2D" parent="PlayerStructure"]
visible = false

[node name="Eixo" type="Position2D" parent="PlayerStructure/Mira"]
position = Vector2( -8, -14 )
script = ExtResource( 14 )

[node name="Mira" type="Position2D" parent="PlayerStructure/Mira/Eixo"]
position = Vector2( 68, 11.5 )

[node name="CameraPosition" type="Position2D" parent="PlayerStructure/Mira/Eixo"]
position = Vector2( 63, 6.5 )

[node name="Camera2D" parent="PlayerStructure/Mira/Eixo/CameraPosition" instance=ExtResource( 15 )]

[node name="Arm" type="Node2D" parent="PlayerStructure/Mira/Eixo"]

[node name="Guns" type="Node2D" parent="PlayerStructure/Mira/Eixo"]
position = Vector2( 8, 14 )

[node name="GunsSprites" type="AnimatedSprite" parent="PlayerStructure/Mira/Eixo/Guns"]
frames = SubResource( 14 )
animation = "Guns"
frame = 3
offset = Vector2( 20, 0 )

[node name="Colision" type="Node2D" parent="PlayerStructure"]

[node name="DetectorDeTeto" type="Area2D" parent="PlayerStructure/Colision"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStructure/Colision/DetectorDeTeto"]
position = Vector2( 0, -30 )
shape = SubResource( 15 )

[node name="HitBox" type="Node2D" parent="PlayerStructure"]

[node name="ledgeGrabRaycasts" type="Node2D" parent="PlayerStructure"]

[node name="LedgeRay_Vertical" type="RayCast2D" parent="PlayerStructure/ledgeGrabRaycasts"]
position = Vector2( 16.6905, -48.4183 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="LedgeRay_Up_Horizontal" type="RayCast2D" parent="PlayerStructure/ledgeGrabRaycasts"]
position = Vector2( 0, -60 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="LedgeRay_Horizontal" type="RayCast2D" parent="PlayerStructure/ledgeGrabRaycasts"]
position = Vector2( 0, -40 )
enabled = true
cast_to = Vector2( 15, 0 )

[node name="Timers" type="Node2D" parent="PlayerStructure"]

[node name="WallSlideSticknesTimer" type="Timer" parent="PlayerStructure/Timers"]
wait_time = 0.05
one_shot = true

[node name="WalljumpMovementBlocker" type="Timer" parent="PlayerStructure/Timers"]
wait_time = 0.5
one_shot = true

[node name="RollTimer" type="Timer" parent="PlayerStructure/Timers"]
wait_time = 0.4
one_shot = true

[node name="MiliAtack" type="Timer" parent="PlayerStructure/Timers"]
wait_time = 0.5
one_shot = true

[node name="Ivunerability" type="Timer" parent="PlayerStructure/Timers"]
wait_time = 0.5
one_shot = true

[node name="WallDetectionRaycasts" type="Node2D" parent="."]

[node name="Right" type="Node2D" parent="WallDetectionRaycasts"]

[node name="Up" type="RayCast2D" parent="WallDetectionRaycasts/Right"]
position = Vector2( 0, -47 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="Down" type="RayCast2D" parent="WallDetectionRaycasts/Right"]
position = Vector2( 0, 50 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="Left" type="Node2D" parent="WallDetectionRaycasts"]

[node name="Up" type="RayCast2D" parent="WallDetectionRaycasts/Left"]
position = Vector2( 0, -47 )
enabled = true
cast_to = Vector2( -30, 0 )

[node name="Down" type="RayCast2D" parent="WallDetectionRaycasts/Left"]
position = Vector2( 0, 50 )
enabled = true
cast_to = Vector2( -30, 0 )

[node name="state_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="PlayerStructure/Timers/WallSlideSticknesTimer" to="." method="_on_WallSlideSticknesTimer_timeout"]
[connection signal="timeout" from="PlayerStructure/Timers/WalljumpMovementBlocker" to="." method="_on_WalljumpMovementBlocker_timeout"]
[connection signal="timeout" from="PlayerStructure/Timers/RollTimer" to="." method="_on_RollTimer_timeout"]
[connection signal="timeout" from="PlayerStructure/Timers/MiliAtack" to="." method="_on_MiliAtack_timeout"]
[connection signal="timeout" from="PlayerStructure/Timers/Ivunerability" to="." method="_on_Ivunerability_timeout"]
